<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Mahdi-Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title -->
    <string name="touch_control_title">Advanced</string>

    <!-- Set on boot -->
    <string name="set_on_boot_title">Set on boot</string>
    <string name="set_on_boot_summary">Restore the settings on boot</string>

    <!-- Double tap to wake -->
    <string name="doubletap2wake_title">Double tap to wake</string>
    <string name="doubletap2wake_summary">Double tap anywhere to wake the screen</string>
    <string name="doubletap2wake_off">Disabled</string>
    <string name="doubletap2wake_bottom">Bottom half of the screen</string>
    <string name="doubletap2wake_full">Full screen</string>

    <!-- Sweep to wake -->
    <string name="sweep2wake_title">Sweep to wake</string>
    <string name="sweep2wake_off">Disabled</string>
    <string name="sweep2wake_right">Right</string>
    <string name="sweep2wake_left">Left</string>
    <string name="sweep2wake_up">Up</string>
    <string name="sweep2wake_down">Down</string>
    <string name="sweep2wake_right_left">Right and left</string>
    <string name="sweep2wake_right_up">Right and up</string>
    <string name="sweep2wake_right_down">Right and down</string>
    <string name="sweep2wake_left_up">Left and up</string>
    <string name="sweep2wake_left_down">Left and down</string>
    <string name="sweep2wake_up_down">Up and down</string>
    <string name="sweep2wake_all">All directions</string>

    <!-- Sweep to sleep -->
    <string name="sweep2sleep_title">Sweep to sleep</string>
    <string name="sweep2sleep_off">Disabled</string>
    <string name="sweep2sleep_right">Right</string>
    <string name="sweep2sleep_left">Left</string>
    <string name="sweep2sleep_right_left">Right and left</string>

    <!-- Gestures -->
    <string name="gestures_title">Wake gestures</string>
    <string name="gestures_summary">This option only enables the wake gesture funtion, you will need to install Wake Gesture Xposed module to add gesture actions</string>

    <!-- Powerkey suspend -->
    <string name="powerkeysuspend_title">Power key suspend</string>
    <string name="powerkeysuspend_summary">Using the power key to turn your screen off will temporarily disable all options</string>

    <!-- Wake timeout -->
    <string name="wake_timeout_title">Wake timeout</string>
    <string name="wake_timeout_summary">After this timeout options will be temporarily disabled</string>

    <!-- Vibration strength -->
    <string name="vibration_strength_title">Vibration strength</string>
    <string name="vibration_strength_summary">Adjust the haptic feedback strength</string>

    <!-- Touch wake -->
    <string name="touchwake_title">Touch wake</string>
    <string name="touchwake_summary">If enabled, you will be able to turn the screen on if it times out</string>

    <!-- Touch wake timeout -->
    <string name="touchwake_timeout_title">Touch wake timeout</string>
    <string name="touchwake_timeout_summary">After this timeout options will be temporarily disabled</string>

    <!-- Warning dialog -->
    <string name="touch_control_warning_title">Proceed with Caution</string>
    <string name="touch_control_warning">These settings have the potential to cause higher than normal idle battery drain.\n\nWe request you do not complain about battery life if any of these settings have been enabled.</string>

    <!-- No support dialog -->
    <string name="no_support_title">No support</string>
    <string name="no_support_warning">The kernel you are using does not support these features.</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
