<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Mahdi-Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="com.mahdi.touchcontrol">

    <ListPreference
        android:key="doubletap_2_wake"
        android:persistent="false"
        android:dialogTitle="@string/doubletap2wake_title"
        android:title="@string/doubletap2wake_title"
        android:entries="@array/doubletap2wake_entries"
        android:entryValues="@array/doubletap2wake_values"
        android:defaultValue="0" />

    <CheckBoxPreference
        android:key="doubletap_2_wake2"
        android:title="@string/doubletap2wake_title"
        android:summary="@string/doubletap2wake_summary"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="sweep_2_wake"
        android:title="@string/sweep2wake_title"
        android:summary="@string/sweep2wake_summary"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="sweep_2_sleep"
        android:title="@string/sweep2sleep_title"
        android:summary="@string/sweep2sleep_summary"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="powerkey_suspend"
        android:title="@string/powerkeysuspend_title"
        android:summary="@string/powerkeysuspend_summary"
        android:persistent="false" />

    <com.mahdi.touchcontrol.preference.SeekBarPreference
        android:key="wake_timeout"
        android:title="@string/wake_timeout_title"
        android:summary="@string/wake_timeout_summary"
        android:max="30"
        settings:min="0"
        settings:unitsLeft=""
        settings:unitsRight="min"
        android:persistent="true" />

    <com.mahdi.touchcontrol.preference.SeekBarPreference
        android:key="vibration_strength"
        android:title="@string/vibration_strength_title"
        android:summary="@string/vibration_strength_summary"
        android:max="50"
        settings:min="0"
        settings:unitsLeft=""
        settings:unitsRight=""
        android:persistent="true" />

    <CheckBoxPreference
        android:key="touch_wake"
        android:title="@string/touchwake_title"
        android:summary="@string/touchwake_summary"
        android:persistent="false" />

    <com.mahdi.touchcontrol.preference.SeekBarPreference
        android:key="touch_wake_timeout"
        android:title="@string/touchwake_timeout_title"
        android:summary="@string/touchwake_timeout_summary"
        android:max="300000"
        settings:min="0"
        settings:unitsLeft=""
        settings:unitsRight="sec"
        android:persistent="true" />

</PreferenceScreen>
